# ridge-test

./: AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md
backend/: Dockerfile  Procfile  main.py  pyproject.toml
backend/api/: builder.py  combiner.py  diagrams.py  main.py  schemas.py
backend/calculation/: __init__.py  _frame_math.py  _ops_builder.py  _tag_manager.py  analysis.py  catalog.py  combined_report.py  designer.py  element.py  load.py  material.py  model.py  node.py  plotting.py  plotting_plotly.py  results.py  section.py  section_properties.py  support.py
backend/calculation/ec3/: __init__.py  beam.py  column.py  column_report.py  hollow_section_data.py  report.py  section_data.py  truss_member.py  truss_member_report.py
backend/calculation/ec3/templates/: beam_report.tex.j2  column_report.tex.j2  truss_member_report.tex.j2
backend/calculation/load_takedown3d/: __init__.py  engine.py  mesh.py  opensees_builder.py  results.py  types.py
backend/calculation/templates/: combined_report.tex.j2
backend/calculation/truss/: __init__.py  report.py
backend/calculation/truss/templates/: truss_report.tex.j2
backend/data/rhs/: rhs-sections.csv
backend/data/shs/: shs-sections.csv
backend/examples/: OpenSeesPy Case Study R1.ipynb  Parametric beam calculator with hinges.ipynb  Portal Frame (OpenSeesPy).ipynb
web/: .cta.json  package.json  wrangler.jsonc
web/src/: routeTree.gen.ts  styles.css
web/src/components/: AppToolbar.tsx  ThemeModeToggle.tsx
web/src/lib/: api.ts  structure-persistence.ts  structure-store.ts  theme.tsx  types.ts
(+34 files in other folders)
