[project]
name = "formandfunction"
version = "0.1.0"
description = "2D indeterminate structural analysis using OpenSeesPy — beams, frames, and trusses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "concreteproperties>=0.7.0",
    "fastapi>=0.115.0",
    "gmsh>=4.15.0",
    "jinja2>=3.1.6",
    "kaleido>=1.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openseespy>=3.7.1.2",
    "opsvis>=1.3.4",
    "plotly>=6.3.1",
    "python-multipart>=0.0.9",
    "sectionproperties>=3.10.2",
    "structuralcodes>=0.6.3",
    "uvicorn[standard]>=0.30.0",
]
